--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/bryanszendel/node-backend-boilerplate#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -26,7 +27,8 @@
     "knex": "^0.20.2",
     "knex-cleaner": "^1.3.0",
     "pg": "^7.14.0",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "^4.1.0",
+    "square-connect": "^2.20191120.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
